hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_function_hint_not_enabled.php
<?hh

type blah<TOut> = (function<TIn>(TIn): TOut);

function foo((function<T>(T):T) $_): void {}

function bar<Tbar>((function<T as Tbar>(T):T) $_): void {}
